# gul

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI_CAPABILITIES.md  CHANGELOG.md  CHANGES.md  CI_CD_AUTOMATION_SUMMARY.md  CI_FIX.md  CODE_REVIEW_REPORT.md  COMMAND_REFERENCE.md  CONTRIBUTING.md  COURSE.md  Cargo.toml  DOCUMENTATION_REVIEW_REPORT.md  DOCUMENTATION_SUMMARY.md  FILE_REVIEW_v32.md  FINAL_VERIFICATION_REPORT.md  FUTURE_DEVELOPMENT.md  GIT_UPLOAD.md  GUL_NATIVE_TEST_IMPLEMENTATION.md  INSTRUCTION.md  LANGUAGE_V21_UPDATE_SUMMARY.md  LICENSE  MCP_ADVANCED.md  MCP_COMPLETE.md  MCP_QUICKSTART.md  MCP_SERVER_SPEC.md  MCP_STATUS.md  PHASE_15_COMPLETION_SUMMARY.md  PHASE_16_COMPLETION_REPORT.md  PHASE_6_COMPLETION_REPORT.md  PLAN.md  PROGRESS.md  PROJECT_REVIEW_SUMMARY.md  PROJECT_STATUS.md  README.md  RELEASE_NOTES_v0.13.0.md  SUPPORT_PLATFORMS.md  SYNTAX.md  (+49 more)
benches/: package_bench.rs  performance.rs
compiler/: ACHIEVEMENT_REPORT.md  BOOTSTRAP_STATUS.md  BUILD.md  COLLECTION_SUPPORT.md  COMPLETE_SUMMARY.md  INTERPRETER_FINAL.md  INTERPRETER_STATUS.md  LEXER_REVIEW.md  PARSER_SUMMARY.md  README.md  STATUS.md  flat_compiler.mn  main.mn
compiler_rust/: Cargo.toml  analyzer.rs  main.rs  test_bug.rs
compilers/nightly/: Cargo.toml  autograd_bin  autograd_test  autograd_test.mn  flat_compiler.rs  main.rs  sanity_check.rs  test_app  test_array_set  test_bin  test_completion  test_control_flow  test_dict_add_app  test_dict_app  test_floats  test_fstring  test_insert_app  test_list_app  test_list_remove_app  test_match  test_missing  test_multidim  test_multidim_app  test_ownership  test_pop_app  test_sets_app  test_string  test_tuple
compilers/nightly/ast/: nodes.rs
compilers/nightly/builtins/: codegen_helpers.rs  mod.rs
compilers/nightly/codegen/: rust_backend.rs
compilers/nightly/docs/: WALKTHROUGH.md
compilers/nightly/ir/: cranelift_backend.rs  ir_builder.rs
compilers/nightly/lexer/: lexer.rs  token.rs
compilers/nightly/parser/: parser.rs
compilers/nightly/semantic/: analyzer.rs
compilers/nightly/src/ast/: mod.rs
compilers/nightly/src/codegen/: mod.rs
compilers/nightly/src/ffi/: mod.rs
compilers/nightly/src/ir/: mod.rs
compilers/nightly/src/lexer/: token.rs
compilers/nightly/src/optimizer/: mod.rs
compilers/nightly/src/parser/: mod.rs
compilers/nightly/src/semantic/: mod.rs
compilers/nightly/src/stdlib/: stdlib.c
compilers/nightly/tests/: control_flow.mn  example.rs  input_type_constructor.mn  mini_loop  mini_loop.gul  mod.rs  run_tests.py  sanity  sanity.gul  sanity_check.mn  test_alpha.rs  test_args.rs  test_arrays.gul  test_arrays_str.gul  test_completion.gul  test_dict.gul  test_dict_add.gul  test_fileio.rs  test_floats.gul  test_fn.rs  test_fstring.gul  test_lexer.rs  test_list_insert.gul  test_list_methods.gul  test_list_pop.gul  test_list_remove.gul  test_match.gul  test_missing_methods.gul  test_multidim.gul  test_ownership.gul  test_sets.gul  test_sys.rs  test_tuple.gul
compilers/nightly/tests/legacy_rust/: simple_add.rs  test_dict_debug.rs  test_dict_in.rs  test_if_color.rs  test_match.rs  test_parser_import.rs  test_slice.rs  test_struct_access.rs  test_trycatch.rs
compilers/stable/: Cargo.toml  main.rs
compilers/stable/ast/: nodes.rs
compilers/stable/codegen/: mod.rs  rust_backend.rs
compilers/stable/ir/: cranelift_backend.rs  ir_nodes.rs  mod.rs
compilers/stable/lexer/: lexer.rs  token.rs
compilers/stable/parser/: parser.rs
compilers/stable/semantic/: analyzer.rs
compilers/stable/tests/: arithmetic.mn  input_test.mn  test_full.rs  test_list.rs  test_match2.rs  test_module.rs  test_simple.rs  test_struct_method_ref.rs
docs/: ACTION_PLAN.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  DOCUMENTATION_UPDATE.md  DOWNLOADS.md  FIXES_SUMMARY.md  FULLSTACK_REVIEW.md  GUL_V32_OVERVIEW.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_ROADMAP.md  INDEX.md  INFRASTRUCTURE_REVIEW.md  MCP-README.md  PACKAGES_IMPLEMENTED.md  PRODUCTION_DEPLOYMENT.md  PROJECT_KNOWLEDGE_BASE.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REORGANIZATION_PLAN.md  REVIEW_COMPLETE.md  UPDATE_COMPLETE.md  V2_VS_V32_COMPARISON.md  V32_UPDATE_COMPLETE.md  V3_COMPLETE_REPORT.md  V3_ENFORCEMENT_REPORT.md  build_and_flash_embedded.md  devhistory.md  language_spec.md  optimize3.md  proposalnewsyntax.md  roadmap.md  testfiles.md
examples/: beginner_tutorial.mn  c_inline.mn  conversion_test  conversion_test.mn  data_analysis_complete.mn  data_analysis_simple  data_analysis_simple.mn  data_processing_v31.mn  data_processing_v32.mn  database-integration-tests.md  database_operations  database_operations.mn  dataflow_calculator.mn  embedded_blink.mn  functions_test  functions_test.mn  hello_simple  hello_simple.mn  hello_world.mn  machine_learning.mn  ml_gradient_descent  ml_gradient_descent.mn  new_tui_demo.rs  pipeline_demo.mn  programming_deck.rs  python_inline.cs  revised_syntax_demo.gul  revised_syntax_demo.mn  scientific_computing.mn  scientific_iterative.mn  sql_query.mn  system_programming  system_programming.mn  tui_demo.rs  ui_slider.mn  v2_verify.mn  v31_showcase.mn  v32_showcase.mn  v32_verify.mn  web_api_v31.mn  (+2 more)
gul_compiler/: Cargo.toml  syntax.md  test.gul  test_arrays  test_arrays_str  test_fstring  test_match
scripts/: audit_structure.py  check_dependencies.py  check_gul101_syntax.py  cleanup_todos.py  docgen.sh  generate_all_packages.py  generate_package_catalog.py  generate_package_metadata.py  generate_packages.sh  generate_pkg_report.py  knowlege_base_gen.py  test_all_packages.py  test_runner.mn  update.sh  update_packages.sh
src/: ast.rs  interpreter.rs  lib.rs  main.rs  parser.rs  semantic.rs  stdlib.rs
src_bootstrap/: ast.rs  compiler.rs  interpreter.rs  lib.rs  main.rs  parser.rs  runtime.rs  semantic.rs  stdlib.rs
std/: collections.mn  fs.mn  io.mn
templates/: secrets.sct.template
tests/: advanced_features.mn  phase234  (+51 more)
web/: Cargo.toml  Dioxus.toml  IMPLEMENTATION_SUMMARY.md  README.md  index.html
web/public/: style.css
web/src/: main.rs
(+402 files in other folders)
