[package]
name = "gul"
version = "0.13.0"
edition = "2021"
authors = ["GUL Team <team@gul-lang.org>"]
description = "GUL (Glob Universal Language) - A universal programming language with multi-language integration, flexible imports, and comprehensive annotations"
license = "MIT"
repository = "https://github.com/glob-lang/glob"
keywords = [
    "compiler",
    "programming-language",
    "multi-paradigm",
    "async",
    "scientific",
]
categories = ["compilers", "development-tools"]

[lib]
name = "glob_lang"
path = "src/lib.rs"

[dependencies]
# Lexer and parser
logos = "0.13"
pest = "2.7"
pest_derive = "2.7"

# AST and code generation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# FFI support
libloading = "0.8"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
dioxus = { version = "0.7.1", features = [] }


# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography for package signing
sha2 = "0.10"
hex = "0.4"

# TUI components
crossterm = "0.27"
unicode-width = "0.1"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Math and science
num-traits = "0.2"
num-complex = "0.4"

# Encoding
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "gul"
path = "src/main.rs"

[features]
default = ["dioxus/web"]
