[package]
name = "gul"
version = "0.13.0"
edition = "2021"
authors = ["GUL Team <team@gul-lang.org>"]
description = "GUL (GUL Universal Language) - A universal programming language with multi-language integration, flexible imports, and comprehensive annotations"
license = "MIT"
repository = "https://github.com/gul-lang/gul"
keywords = [
    "compiler",
    "programming-language",
    "multi-paradigm",
    "async",
    "scientific",
]
categories = ["compilers", "development-tools"]

[lib]
name = "gul_lang"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
libloading = "0.8"
colored = "2.1"
hex = "0.4"
crossterm = "0.28"
unicode-width = "0.1"
ratatui = { version = "0.29", default-features = false, features = [
    "crossterm",
] }
rusqlite = { version = "0.30", features = ["bundled"] }
num-traits = "0.2"
num-complex = "0.4"
base64 = "0.21"
syntect = "5.2"
dioxus = { version = "0.7.1", features = [] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bin]]
name = "gul"
path = "src/main.rs"

[[bench]]
name = "performance"
harness = false

[features]
default = ["dioxus/web"]
tui = []
web-tui = []
# Interop feature flags (optional - for advanced integrations)
python-interop = []
js-interop = []
sql-interop = []
postgres = []
sqlite = []
