[package]
name = "gul"
version = "0.13.0"
edition = "2021"
authors = ["GUL Team <team@gul-lang.org>"]
description = "GUL (GUL Universal Language) - A universal programming language with multi-language integration, flexible imports, and comprehensive annotations"
license = "MIT"
repository = "https://github.com/gul-lang/gul"
keywords = [
  "compiler",
  "programming-language",
  "multi-paradigm",
  "async",
  "scientific",
  "embedded",
]
categories = ["compilers", "development-tools"]

[lib]
name = "gul_lang"
path = "src_bootstrap/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
gul-repl = { path = "packages/devtools/gul-repl" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.10"
lazy_static = "1.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
libloading = "0.8"
colored = "2.1"
hex = "0.4"
crossterm = "0.28"
unicode-width = "0.1"
ratatui = { version = "0.29", default-features = false, features = [
  "crossterm",
] }
rusqlite = { version = "0.30", features = ["bundled"] }
num-traits = "0.2"
num-complex = "0.4"
base64 = "0.21"
syntect = "5.2"
dioxus = { version = "0.7.1", features = [] }
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
gul-batt = { version = "0.1.0", path = "packages/embedded/gul-batt" }
gul-micropython = { version = "0.1.0", path = "packages/embedded/gul-micropython" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bin]]
name = "gul"
path = "src_bootstrap/main.rs"

[[bench]]
name = "performance"
harness = false

[features]
default = ["dioxus/web"]
tui = []
web-tui = []
mcp = ["axum", "tower", "tower-http"]
# Interop feature flags (optional - for advanced integrations)
python-interop = []
js-interop = []
sql-interop = []
postgres = []
sqlite = []

[workspace]
members = ["gul_compiler","packages/*/*"]
exclude = [
  "packages/*/src",
  "packages/*/tests",
  "packages/*/examples",
  "packages/*/benches",
  "packages/algo",           # Category folders that aren't packages
  "packages/devtools",
  "packages/infrastructure",
  # Add generic exclude for non-package categories if possible?
  # Cargo doesn't support wildcards in exclude for directories? It does.
]
