[package]
name = "gul-website"
version = "0.13.0"
edition = "2021"
authors = ["GUL Team"]
description = "Official GUL Programming Language Website with Interactive IDE"

[dependencies]
dioxus = { version = "0.6", features = ["web", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlTextAreaElement", "console"] }
js-sys = "0.3"
gloo-timers = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
