[package]
name = "gul_nightly"
version = "0.1.0"
edition = "2021"
authors = ["GUL Team"]
description = "GUL Programming Language Compiler"

[[bin]]
name = "gulc"
path = "src/main.rs"

[dependencies]
cranelift = "0.103"
cranelift-module = "0.103"
cranelift-object = "0.103"
cranelift-jit = "0.103"
target-lexicon = "0.12"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
