[package]
name = "gul_stable"
version = "0.1.0"
edition = "2021"
authors = ["GUL Team"]
description = "GUL Stable Compiler - Rust-based compiler targeting native code"

[[bin]]
name = "gul-compile"
path = "main.rs"

[dependencies]
# Cranelift codegen (primary backend)
cranelift = "0.103"
cranelift-module = "0.103"
cranelift-object = "0.103"
target-lexicon = "0.12"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI (optional, for future enhanced CLI)
# clap = { version = "4.4", features = ["derive"] }

[features]
default = ["cranelift-backend"]
cranelift-backend = []
# llvm-backend = []  # Future: LLVM backend support

[profile.release]
opt-level = 3
lto = true
